[tool.poetry]
name = "opus-glue-core"
version = "0.1.6"
description = ""
authors = ["duyet-mai <the@duyet.com>"]
readme = "README.md"
packages = [{include = "opus_glue_core"}]


[tool.poetry.dependencies]
python = "^3.7"
Jinja2 = "^3.1.2"
boto3 = "^1.24.15"
botocore = "^1.27.15"
s3transfer = "^0.6.0"
pyspark = "3.1.1"
delta-spark = "1.0.1"
requests = "^2.28.1"
pytz = "^2022.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
